src/main/antlr/LoocParser.java
// $ANTLR 3.3 Nov 30, 2010 12:50:56 Looc.g 2017-02-13 10:10:07
package main.antlr;

import org.antlr.runtime.*;
import java.util.Stack;
import java.util.List;
import java.util.ArrayList;


import org.antlr.runtime.tree.*;

public class LoocParser extends Parser {
    public static final String[] tokenNames = new String[] {
        "<invalid>", "<EOR>", "<DOWN>", "<UP>", "IDF_CLASS", "IDF", "CSTE_CHAINE", "CSTE_ENT", "WS", "'class'", "'inherit'", "'='", "'('", "')'", "'var'", "':'", "';'", "'int'", "'string'", "'method'", "'{'", "'}'", "','", "':='", "'if'", "'then'", "'else'", "'fi'", "'for'", "'in'", "'..'", "'do'", "'end'", "'.'", "'write'", "'read'", "'return'", "'this'", "'super'", "'-'", "'new'", "'/'", "'*'", "'%'", "'+'", "'<'", "'>'", "'=='", "'!='"
    };
    public static final int EOF=-1;
    public static final int T__9=9;
    public static final int T__10=10;
    public static final int T__11=11;
    public static final int T__12=12;
    public static final int T__13=13;
    public static final int T__14=14;
    public static final int T__15=15;
    public static final int T__16=16;
    public static final int T__17=17;
    public static final int T__18=18;
    public static final int T__19=19;
    public static final int T__20=20;
    public static final int T__21=21;
    public static final int T__22=22;
    public static final int T__23=23;
    public static final int T__24=24;
    public static final int T__25=25;
    public static final int T__26=26;
    public static final int T__27=27;
    public static final int T__28=28;
    public static final int T__29=29;
    public static final int T__30=30;
    public static final int T__31=31;
    public static final int T__32=32;
    public static final int T__33=33;
    public static final int T__34=34;
    public static final int T__35=35;
    public static final int T__36=36;
    public static final int T__37=37;
    public static final int T__38=38;
    public static final int T__39=39;
    public static final int T__40=40;
    public static final int T__41=41;
    public static final int T__42=42;
    public static final int T__43=43;
    public static final int T__44=44;
    public static final int T__45=45;
    public static final int T__46=46;
    public static final int T__47=47;
    public static final int T__48=48;
    public static final int IDF_CLASS=4;
    public static final int IDF=5;
    public static final int CSTE_CHAINE=6;
    public static final int CSTE_ENT=7;
    public static final int WS=8;

    // delegates
    // delegators


        public LoocParser(TokenStream input) {
            this(input, new RecognizerSharedState());
        }
        public LoocParser(TokenStream input, RecognizerSharedState state) {
            super(input, state);

        }

    protected TreeAdaptor adaptor = new CommonTreeAdaptor();

    public void setTreeAdaptor(TreeAdaptor adaptor) {
        this.adaptor = adaptor;
    }
    public TreeAdaptor getTreeAdaptor() {
        return adaptor;
    }

    public String[] getTokenNames() { return LoocParser.tokenNames; }
    public String getGrammarFileName() { return "Looc.g"; }


    public static class program_return extends ParserRuleReturnScope {
        CommonTree tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start "program"
    // Looc.g:9:1: program : ( class_decl )* ( var_decl )* ( instruction )+ ;
    public final LoocParser.program_return program() throws RecognitionException {
        LoocParser.program_return retval = new LoocParser.program_return();
        retval.start = input.LT(1);

        CommonTree root_0 = null;

        LoocParser.class_decl_return class_decl1 = null;

        LoocParser.var_decl_return var_decl2 = null;

        LoocParser.instruction_return instruction3 = null;



        try {
            // Looc.g:9:8: ( ( class_decl )* ( var_decl )* ( instruction )+ )
            // Looc.g:9:12: ( class_decl )* ( var_decl )* ( instruction )+
            {
            root_0 = (CommonTree)adaptor.nil();

            // Looc.g:9:12: ( class_decl )*
            loop1:
            do {
                int alt1=2;
                int LA1_0 = input.LA(1);

                if ( (LA1_0==9) ) {
                    alt1=1;
                }


                switch (alt1) {
            	case 1 :
            	    // Looc.g:9:12: class_decl
            	    {
            	    pushFollow(FOLLOW_class_decl_in_program34);
            	    class_decl1=class_decl();

            	    state._fsp--;

            	    adaptor.addChild(root_0, class_decl1.getTree());

            	    }
            	    break;

            	default :
            	    break loop1;
                }
            } while (true);

            // Looc.g:9:24: ( var_decl )*
            loop2:
            do {
                int alt2=2;
                int LA2_0 = input.LA(1);

                if ( (LA2_0==14) ) {
                    alt2=1;
                }


                switch (alt2) {
            	case 1 :
            	    // Looc.g:9:24: var_decl
            	    {
            	    pushFollow(FOLLOW_var_decl_in_program37);
            	    var_decl2=var_decl();

            	    state._fsp--;

            	    adaptor.addChild(root_0, var_decl2.getTree());

            	    }
            	    break;

            	default :
            	    break loop2;
                }
            } while (true);

            // Looc.g:9:34: ( instruction )+
            int cnt3=0;
            loop3:
            do {
                int alt3=2;
                int LA3_0 = input.LA(1);

                if ( (LA3_0==IDF||LA3_0==20||LA3_0==24||LA3_0==28||LA3_0==31||(LA3_0>=34 && LA3_0<=36)) ) {
                    alt3=1;
                }


                switch (alt3) {
            	case 1 :
            	    // Looc.g:9:34: instruction
            	    {
            	    pushFollow(FOLLOW_instruction_in_program40);
            	    instruction3=instruction();

            	    state._fsp--;

            	    adaptor.addChild(root_0, instruction3.getTree());

            	    }
            	    break;

            	default :
            	    if ( cnt3 >= 1 ) break loop3;
                        EarlyExitException eee =
                            new EarlyExitException(3, input);
                        throw eee;
                }
                cnt3++;
            } while (true);


            }

            retval.stop = input.LT(-1);

            retval.tree = (CommonTree)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (CommonTree)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }
        finally {
        }
        return retval;
    }
    // $ANTLR end "program"

    public static class class_decl_return extends ParserRuleReturnScope {
        CommonTree tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start "class_decl"
    // Looc.g:12:1: class_decl : 'class' IDF_CLASS ( 'inherit' IDF_CLASS )? '=' '(' class_item_decl ')' ;
    public final LoocParser.class_decl_return class_decl() throws RecognitionException {
        LoocParser.class_decl_return retval = new LoocParser.class_decl_return();
        retval.start = input.LT(1);

        CommonTree root_0 = null;

        Token string_literal4=null;
        Token IDF_CLASS5=null;
        Token string_literal6=null;
        Token IDF_CLASS7=null;
        Token char_literal8=null;
        Token char_literal9=null;
        Token char_literal11=null;
        LoocParser.class_item_decl_return class_item_decl10 = null;


        CommonTree string_literal4_tree=null;
        CommonTree IDF_CLASS5_tree=null;
        CommonTree string_literal6_tree=null;
        CommonTree IDF_CLASS7_tree=null;
        CommonTree char_literal8_tree=null;
        CommonTree char_literal9_tree=null;
        CommonTree char_literal11_tree=null;

        try {
            // Looc.g:12:11: ( 'class' IDF_CLASS ( 'inherit' IDF_CLASS )? '=' '(' class_item_decl ')' )
            // Looc.g:12:14: 'class' IDF_CLASS ( 'inherit' IDF_CLASS )? '=' '(' class_item_decl ')'
            {
            root_0 = (CommonTree)adaptor.nil();

            string_literal4=(Token)match(input,9,FOLLOW_9_in_class_decl53);
            string_literal4_tree = (CommonTree)adaptor.create(string_literal4);
            adaptor.addChild(root_0, string_literal4_tree);

            IDF_CLASS5=(Token)match(input,IDF_CLASS,FOLLOW_IDF_CLASS_in_class_decl55);
            IDF_CLASS5_tree = (CommonTree)adaptor.create(IDF_CLASS5);
            adaptor.addChild(root_0, IDF_CLASS5_tree);

            // Looc.g:12:32: ( 'inherit' IDF_CLASS )?
            int alt4=2;
            int LA4_0 = input.LA(1);

            if ( (LA4_0==10) ) {
                alt4=1;
            }
            switch (alt4) {
                case 1 :
                    // Looc.g:12:33: 'inherit' IDF_CLASS
                    {
                    string_literal6=(Token)match(input,10,FOLLOW_10_in_class_decl58);
                    string_literal6_tree = (CommonTree)adaptor.create(string_literal6);
                    adaptor.addChild(root_0, string_literal6_tree);

                    IDF_CLASS7=(Token)match(input,IDF_CLASS,FOLLOW_IDF_CLASS_in_class_decl60);
                    IDF_CLASS7_tree = (CommonTree)adaptor.create(IDF_CLASS7);
                    adaptor.addChild(root_0, IDF_CLASS7_tree);


                    }
                    break;

            }

            char_literal8=(Token)match(input,11,FOLLOW_11_in_class_decl64);
            char_literal8_tree = (CommonTree)adaptor.create(char_literal8);
            adaptor.addChild(root_0, char_literal8_tree);

            char_literal9=(Token)match(input,12,FOLLOW_12_in_class_decl66);
            char_literal9_tree = (CommonTree)adaptor.create(char_literal9);
            adaptor.addChild(root_0, char_literal9_tree);

            pushFollow(FOLLOW_class_item_decl_in_class_decl68);
            class_item_decl10=class_item_decl();

            state._fsp--;

            adaptor.addChild(root_0, class_item_decl10.getTree());
            char_literal11=(Token)match(input,13,FOLLOW_13_in_class_decl70);
            char_literal11_tree = (CommonTree)adaptor.create(char_literal11);
            adaptor.addChild(root_0, char_literal11_tree);


            }

            retval.stop = input.LT(-1);

            retval.tree = (CommonTree)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (CommonTree)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }
        finally {
        }
        return retval;
    }
    // $ANTLR end "class_decl"

    public static class class_item_decl_return extends ParserRuleReturnScope {
        CommonTree tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start "class_item_decl"
    // Looc.g:15:1: class_item_decl : ( var_decl )* ( method_decl )* ;
    public final LoocParser.class_item_decl_return class_item_decl() throws RecognitionException {
        LoocParser.class_item_decl_return retval = new LoocParser.class_item_decl_return();
        retval.start = input.LT(1);

        CommonTree root_0 = null;

        LoocParser.var_decl_return var_decl12 = null;

        LoocParser.method_decl_return method_decl13 = null;



        try {
            // Looc.g:15:16: ( ( var_decl )* ( method_decl )* )
            // Looc.g:15:19: ( var_decl )* ( method_decl )*
            {
            root_0 = (CommonTree)adaptor.nil();

            // Looc.g:15:19: ( var_decl )*
            loop5:
            do {
                int alt5=2;
                int LA5_0 = input.LA(1);

                if ( (LA5_0==14) ) {
                    alt5=1;
                }


                switch (alt5) {
            	case 1 :
            	    // Looc.g:15:19: var_decl
            	    {
            	    pushFollow(FOLLOW_var_decl_in_class_item_decl84);
            	    var_decl12=var_decl();

            	    state._fsp--;

            	    adaptor.addChild(root_0, var_decl12.getTree());

            	    }
            	    break;

            	default :
            	    break loop5;
                }
            } while (true);

            // Looc.g:15:29: ( method_decl )*
            loop6:
            do {
                int alt6=2;
                int LA6_0 = input.LA(1);

                if ( (LA6_0==19) ) {
                    alt6=1;
                }


                switch (alt6) {
            	case 1 :
            	    // Looc.g:15:29: method_decl
            	    {
            	    pushFollow(FOLLOW_method_decl_in_class_item_decl87);
            	    method_decl13=method_decl();

            	    state._fsp--;

            	    adaptor.addChild(root_0, method_decl13.getTree());

            	    }
            	    break;

            	default :
            	    break loop6;
                }
            } while (true);


            }

            retval.stop = input.LT(-1);

            retval.tree = (CommonTree)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (CommonTree)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }
        finally {
        }
        return retval;
    }
    // $ANTLR end "class_item_decl"

    public static class var_decl_return extends ParserRuleReturnScope {
        CommonTree tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start "var_decl"
    // Looc.g:18:1: var_decl : 'var' IDF ':' type ';' ;
    public final LoocParser.var_decl_return var_decl() throws RecognitionException {
        LoocParser.var_decl_return retval = new LoocParser.var_decl_return();
        retval.start = input.LT(1);

        CommonTree root_0 = null;

        Token string_literal14=null;
        Token IDF15=null;
        Token char_literal16=null;
        Token char_literal18=null;
        LoocParser.type_return type17 = null;


        CommonTree string_literal14_tree=null;
        CommonTree IDF15_tree=null;
        CommonTree char_literal16_tree=null;
        CommonTree char_literal18_tree=null;

        try {
            // Looc.g:18:9: ( 'var' IDF ':' type ';' )
            // Looc.g:18:12: 'var' IDF ':' type ';'
            {
            root_0 = (CommonTree)adaptor.nil();

            string_literal14=(Token)match(input,14,FOLLOW_14_in_var_decl102);
            string_literal14_tree = (CommonTree)adaptor.create(string_literal14);
            adaptor.addChild(root_0, string_literal14_tree);

            IDF15=(Token)match(input,IDF,FOLLOW_IDF_in_var_decl104);
            IDF15_tree = (CommonTree)adaptor.create(IDF15);
            adaptor.addChild(root_0, IDF15_tree);

            char_literal16=(Token)match(input,15,FOLLOW_15_in_var_decl106);
            char_literal16_tree = (CommonTree)adaptor.create(char_literal16);
            adaptor.addChild(root_0, char_literal16_tree);

            pushFollow(FOLLOW_type_in_var_decl108);
            type17=type();

            state._fsp--;

            adaptor.addChild(root_0, type17.getTree());
            char_literal18=(Token)match(input,16,FOLLOW_16_in_var_decl110);
            char_literal18_tree = (CommonTree)adaptor.create(char_literal18);
            adaptor.addChild(root_0, char_literal18_tree);


            }

            retval.stop = input.LT(-1);

            retval.tree = (CommonTree)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (CommonTree)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }
        finally {
        }
        return retval;
    }
    // $ANTLR end "var_decl"

    public static class type_return extends ParserRuleReturnScope {
        CommonTree tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start "type"
    // Looc.g:21:1: type : ( IDF_CLASS | 'int' | 'string' );
    public final LoocParser.type_return type() throws RecognitionException {
        LoocParser.type_return retval = new LoocParser.type_return();
        retval.start = input.LT(1);

        CommonTree root_0 = null;

        Token set19=null;

        CommonTree set19_tree=null;

        try {
            // Looc.g:21:5: ( IDF_CLASS | 'int' | 'string' )
            // Looc.g:
            {
            root_0 = (CommonTree)adaptor.nil();

            set19=(Token)input.LT(1);
            if ( input.LA(1)==IDF_CLASS||(input.LA(1)>=17 && input.LA(1)<=18) ) {
                input.consume();
                adaptor.addChild(root_0, (CommonTree)adaptor.create(set19));
                state.errorRecovery=false;
            }
            else {
                MismatchedSetException mse = new MismatchedSetException(null,input);
                throw mse;
            }


            }

            retval.stop = input.LT(-1);

            retval.tree = (CommonTree)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (CommonTree)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }
        finally {
        }
        return retval;
    }
    // $ANTLR end "type"

    public static class method_decl_return extends ParserRuleReturnScope {
        CommonTree tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start "method_decl"
    // Looc.g:26:1: method_decl : 'method' IDF '(' ( method_args )* ')' method_decl_suite ;
    public final LoocParser.method_decl_return method_decl() throws RecognitionException {
        LoocParser.method_decl_return retval = new LoocParser.method_decl_return();
        retval.start = input.LT(1);

        CommonTree root_0 = null;

        Token string_literal20=null;
        Token IDF21=null;
        Token char_literal22=null;
        Token char_literal24=null;
        LoocParser.method_args_return method_args23 = null;

        LoocParser.method_decl_suite_return method_decl_suite25 = null;


        CommonTree string_literal20_tree=null;
        CommonTree IDF21_tree=null;
        CommonTree char_literal22_tree=null;
        CommonTree char_literal24_tree=null;

        try {
            // Looc.g:26:12: ( 'method' IDF '(' ( method_args )* ')' method_decl_suite )
            // Looc.g:26:14: 'method' IDF '(' ( method_args )* ')' method_decl_suite
            {
            root_0 = (CommonTree)adaptor.nil();

            string_literal20=(Token)match(input,19,FOLLOW_19_in_method_decl144);
            string_literal20_tree = (CommonTree)adaptor.create(string_literal20);
            adaptor.addChild(root_0, string_literal20_tree);

            IDF21=(Token)match(input,IDF,FOLLOW_IDF_in_method_decl146);
            IDF21_tree = (CommonTree)adaptor.create(IDF21);
            adaptor.addChild(root_0, IDF21_tree);

            char_literal22=(Token)match(input,12,FOLLOW_12_in_method_decl148);
            char_literal22_tree = (CommonTree)adaptor.create(char_literal22);
            adaptor.addChild(root_0, char_literal22_tree);

            // Looc.g:26:31: ( method_args )*
            loop7:
            do {
                int alt7=2;
                int LA7_0 = input.LA(1);

                if ( (LA7_0==IDF) ) {
                    alt7=1;
                }


                switch (alt7) {
            	case 1 :
            	    // Looc.g:26:31: method_args
            	    {
            	    pushFollow(FOLLOW_method_args_in_method_decl150);
            	    method_args23=method_args();

            	    state._fsp--;

            	    adaptor.addChild(root_0, method_args23.getTree());

            	    }
            	    break;

            	default :
            	    break loop7;
                }
            } while (true);

            char_literal24=(Token)match(input,13,FOLLOW_13_in_method_decl153);
            char_literal24_tree = (CommonTree)adaptor.create(char_literal24);
            adaptor.addChild(root_0, char_literal24_tree);

            pushFollow(FOLLOW_method_decl_suite_in_method_decl156);
            method_decl_suite25=method_decl_suite();

            state._fsp--;

            adaptor.addChild(root_0, method_decl_suite25.getTree());

            }

            retval.stop = input.LT(-1);

            retval.tree = (CommonTree)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (CommonTree)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }
        finally {
        }
        return retval;
    }
    // $ANTLR end "method_decl"

    public static class method_decl_suite_return extends ParserRuleReturnScope {
        CommonTree tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start "method_decl_suite"
    // Looc.g:29:1: method_decl_suite : ( '{' ( var_decl )* ( instruction )+ '}' | ':' type '{' ( var_decl )* ( instruction )+ '}' );
    public final LoocParser.method_decl_suite_return method_decl_suite() throws RecognitionException {
        LoocParser.method_decl_suite_return retval = new LoocParser.method_decl_suite_return();
        retval.start = input.LT(1);

        CommonTree root_0 = null;

        Token char_literal26=null;
        Token char_literal29=null;
        Token char_literal30=null;
        Token char_literal32=null;
        Token char_literal35=null;
        LoocParser.var_decl_return var_decl27 = null;

        LoocParser.instruction_return instruction28 = null;

        LoocParser.type_return type31 = null;

        LoocParser.var_decl_return var_decl33 = null;

        LoocParser.instruction_return instruction34 = null;


        CommonTree char_literal26_tree=null;
        CommonTree char_literal29_tree=null;
        CommonTree char_literal30_tree=null;
        CommonTree char_literal32_tree=null;
        CommonTree char_literal35_tree=null;

        try {
            // Looc.g:29:18: ( '{' ( var_decl )* ( instruction )+ '}' | ':' type '{' ( var_decl )* ( instruction )+ '}' )
            int alt12=2;
            int LA12_0 = input.LA(1);

            if ( (LA12_0==20) ) {
                alt12=1;
            }
            else if ( (LA12_0==15) ) {
                alt12=2;
            }
            else {
                NoViableAltException nvae =
                    new NoViableAltException("", 12, 0, input);

                throw nvae;
            }
            switch (alt12) {
                case 1 :
                    // Looc.g:29:20: '{' ( var_decl )* ( instruction )+ '}'
                    {
                    root_0 = (CommonTree)adaptor.nil();

                    char_literal26=(Token)match(input,20,FOLLOW_20_in_method_decl_suite169);
                    char_literal26_tree = (CommonTree)adaptor.create(char_literal26);
                    adaptor.addChild(root_0, char_literal26_tree);

                    // Looc.g:29:24: ( var_decl )*
                    loop8:
                    do {
                        int alt8=2;
                        int LA8_0 = input.LA(1);

                        if ( (LA8_0==14) ) {
                            alt8=1;
                        }


                        switch (alt8) {
                    	case 1 :
                    	    // Looc.g:29:24: var_decl
                    	    {
                    	    pushFollow(FOLLOW_var_decl_in_method_decl_suite171);
                    	    var_decl27=var_decl();

                    	    state._fsp--;

                    	    adaptor.addChild(root_0, var_decl27.getTree());

                    	    }
                    	    break;

                    	default :
                    	    break loop8;
                        }
                    } while (true);

                    // Looc.g:29:34: ( instruction )+
                    int cnt9=0;
                    loop9:
                    do {
                        int alt9=2;
                        int LA9_0 = input.LA(1);

                        if ( (LA9_0==IDF||LA9_0==20||LA9_0==24||LA9_0==28||LA9_0==31||(LA9_0>=34 && LA9_0<=36)) ) {
                            alt9=1;
                        }


                        switch (alt9) {
                    	case 1 :
                    	    // Looc.g:29:34: instruction
                    	    {
                    	    pushFollow(FOLLOW_instruction_in_method_decl_suite174);
                    	    instruction28=instruction();

                    	    state._fsp--;

                    	    adaptor.addChild(root_0, instruction28.getTree());

                    	    }
                    	    break;

                    	default :
                    	    if ( cnt9 >= 1 ) break loop9;
                                EarlyExitException eee =
                                    new EarlyExitException(9, input);
                                throw eee;
                        }
                        cnt9++;
                    } while (true);

                    char_literal29=(Token)match(input,21,FOLLOW_21_in_method_decl_suite177);
                    char_literal29_tree = (CommonTree)adaptor.create(char_literal29);
                    adaptor.addChild(root_0, char_literal29_tree);


                    }
                    break;
                case 2 :
                    // Looc.g:30:8: ':' type '{' ( var_decl )* ( instruction )+ '}'
                    {
                    root_0 = (CommonTree)adaptor.nil();

                    char_literal30=(Token)match(input,15,FOLLOW_15_in_method_decl_suite186);
                    char_literal30_tree = (CommonTree)adaptor.create(char_literal30);
                    adaptor.addChild(root_0, char_literal30_tree);

                    pushFollow(FOLLOW_type_in_method_decl_suite188);
                    type31=type();

                    state._fsp--;

                    adaptor.addChild(root_0, type31.getTree());
                    char_literal32=(Token)match(input,20,FOLLOW_20_in_method_decl_suite190);
                    char_literal32_tree = (CommonTree)adaptor.create(char_literal32);
                    adaptor.addChild(root_0, char_literal32_tree);

                    // Looc.g:30:21: ( var_decl )*
                    loop10:
                    do {
                        int alt10=2;
                        int LA10_0 = input.LA(1);

                        if ( (LA10_0==14) ) {
                            alt10=1;
                        }


                        switch (alt10) {
                    	case 1 :
                    	    // Looc.g:30:21: var_decl
                    	    {
                    	    pushFollow(FOLLOW_var_decl_in_method_decl_suite192);
                    	    var_decl33=var_decl();

                    	    state._fsp--;

                    	    adaptor.addChild(root_0, var_decl33.getTree());

                    	    }
                    	    break;

                    	default :
                    	    break loop10;
                        }
                    } while (true);

                    // Looc.g:30:31: ( instruction )+
                    int cnt11=0;
                    loop11:
                    do {
                        int alt11=2;
                        int LA11_0 = input.LA(1);

                        if ( (LA11_0==IDF||LA11_0==20||LA11_0==24||LA11_0==28||LA11_0==31||(LA11_0>=34 && LA11_0<=36)) ) {
                            alt11=1;
                        }


                        switch (alt11) {
                    	case 1 :
                    	    // Looc.g:30:31: instruction
                    	    {
                    	    pushFollow(FOLLOW_instruction_in_method_decl_suite195);
                    	    instruction34=instruction();

                    	    state._fsp--;

                    	    adaptor.addChild(root_0, instruction34.getTree());

                    	    }
                    	    break;

                    	default :
                    	    if ( cnt11 >= 1 ) break loop11;
                                EarlyExitException eee =
                                    new EarlyExitException(11, input);
                                throw eee;
                        }
                        cnt11++;
                    } while (true);

                    char_literal35=(Token)match(input,21,FOLLOW_21_in_method_decl_suite198);
                    char_literal35_tree = (CommonTree)adaptor.create(char_literal35);
                    adaptor.addChild(root_0, char_literal35_tree);


                    }
                    break;

            }
            retval.stop = input.LT(-1);

            retval.tree = (CommonTree)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (CommonTree)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }
        finally {
        }
        return retval;
    }
    // $ANTLR end "method_decl_suite"

    public static class method_args_return extends ParserRuleReturnScope {
        CommonTree tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start "method_args"
    // Looc.g:33:1: method_args : IDF ':' type ( ',' IDF ':' type )* ;
    public final LoocParser.method_args_return method_args() throws RecognitionException {
        LoocParser.method_args_return retval = new LoocParser.method_args_return();
        retval.start = input.LT(1);

        CommonTree root_0 = null;

        Token IDF36=null;
        Token char_literal37=null;
        Token char_literal39=null;
        Token IDF40=null;
        Token char_literal41=null;
        LoocParser.type_return type38 = null;

        LoocParser.type_return type42 = null;


        CommonTree IDF36_tree=null;
        CommonTree char_literal37_tree=null;
        CommonTree char_literal39_tree=null;
        CommonTree IDF40_tree=null;
        CommonTree char_literal41_tree=null;

        try {
            // Looc.g:33:12: ( IDF ':' type ( ',' IDF ':' type )* )
            // Looc.g:33:14: IDF ':' type ( ',' IDF ':' type )*
            {
            root_0 = (CommonTree)adaptor.nil();

            IDF36=(Token)match(input,IDF,FOLLOW_IDF_in_method_args211);
            IDF36_tree = (CommonTree)adaptor.create(IDF36);
            adaptor.addChild(root_0, IDF36_tree);

            char_literal37=(Token)match(input,15,FOLLOW_15_in_method_args213);
            char_literal37_tree = (CommonTree)adaptor.create(char_literal37);
            adaptor.addChild(root_0, char_literal37_tree);

            pushFollow(FOLLOW_type_in_method_args215);
            type38=type();

            state._fsp--;

            adaptor.addChild(root_0, type38.getTree());
            // Looc.g:33:27: ( ',' IDF ':' type )*
            loop13:
            do {
                int alt13=2;
                int LA13_0 = input.LA(1);

                if ( (LA13_0==22) ) {
                    alt13=1;
                }


                switch (alt13) {
            	case 1 :
            	    // Looc.g:33:28: ',' IDF ':' type
            	    {
            	    char_literal39=(Token)match(input,22,FOLLOW_22_in_method_args218);
            	    char_literal39_tree = (CommonTree)adaptor.create(char_literal39);
            	    adaptor.addChild(root_0, char_literal39_tree);

            	    IDF40=(Token)match(input,IDF,FOLLOW_IDF_in_method_args220);
            	    IDF40_tree = (CommonTree)adaptor.create(IDF40);
            	    adaptor.addChild(root_0, IDF40_tree);

            	    char_literal41=(Token)match(input,15,FOLLOW_15_in_method_args222);
            	    char_literal41_tree = (CommonTree)adaptor.create(char_literal41);
            	    adaptor.addChild(root_0, char_literal41_tree);

            	    pushFollow(FOLLOW_type_in_method_args224);
            	    type42=type();

            	    state._fsp--;

            	    adaptor.addChild(root_0, type42.getTree());

            	    }
            	    break;

            	default :
            	    break loop13;
                }
            } while (true);


            }

            retval.stop = input.LT(-1);

            retval.tree = (CommonTree)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (CommonTree)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }
        finally {
        }
        return retval;
    }
    // $ANTLR end "method_args"

    public static class instruction_return extends ParserRuleReturnScope {
        CommonTree tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start "instruction"
    // Looc.g:36:1: instruction : ( IDF ':=' expression ';' | 'if' expression 'then' ( instruction )+ ( 'else' ( instruction )+ )? 'fi' | 'for' IDF 'in' expression '..' expression 'do' ( instruction )+ 'end' | '{' ( var_decl )* ( instruction )+ '}' | 'do' expression_start '.' IDF '(' expression ( ',' expression )* ')' ';' | print | read | retour );
    public final LoocParser.instruction_return instruction() throws RecognitionException {
        LoocParser.instruction_return retval = new LoocParser.instruction_return();
        retval.start = input.LT(1);

        CommonTree root_0 = null;
